2020-04-06  Jeff Chapman II  <jchapman@lock3software.com>

	* c-common.c: Remove old debugging include.
	* c-opts.c: Rename contract.h to cxx-contracts.h.
	* contract.c: Rename to:
	* cxx-contracts.c: Add copyright block; fix include.
	* contract.h: Rename to:
	* cxx-contracts.h: Fix copyright block.

2020-03-25  Jeff Chapman II  <jchapman@lock3software.com>

	* contract.h (cxx23_contract_attribute_p): Make global extern.

2020-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91993
	* c-warn.c (warnings_for_convert_and_check): For expr and/or
	result being COMPOUND_EXPRs, skip to ultimate rhs.

2020-03-20  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/94072
	* c-common.c (c_common_type_for_mode): Before using a registered
	built-in type, check that the vectorness of the type matches
	the vectorness of the mode.

2020-03-17  Jeff Chapman II  <jchapman@lock3software.com>

	* contract.h: Remove cpp_ prefixes.
	* contract.c: Ditto.
	* c-opts.c: Ditto.

	* contract.h (contract_mode): Rewrite in terms of constructors instead
	of setters.
	(map_contract_semantic): New.
	(map_contract_level): New.
	* contract.c (+map_contract_semantic): New. Map a soure level contract
	semantic to a contract_semantic enum.
	(map_contract_level): New. Map a source level contract level to a
	contract_level enum.

2020-03-17  Jakub Jelinek  <jakub@redhat.com>

	* c-common.c (resolve_overloaded_builtin): Fix up duplicated word
	issue in a diagnostic message.

2020-03-15  Lewis Hyatt  <lhyatt@gmail.com>

	* c.opt: Avoid redundancy in the help text.

2020-03-02  Marek Polacek  <polacek@redhat.com>

	PR c++/93958 - add missing -std=gnu++20.
	* c.opt: Add -std=gnu++20.

2020-03-01  Martin Sebor  <msebor@redhat.com>

	PR c++/92721
	* c-attribs.c (append_access_attrs): Correctly handle attribute.
	(handle_access_attribute): Same.

2020-02-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/93858
	* c-pragma.c (handle_pragma_diagnostic): Add missing ? after